<resources>
    <string name="app_name">Instant Upload</string>
    <string name="app_desc">Super-fast uploads to the clipboard</string>

    <string name="action_help">Help</string>

    <string name="activity_main_title">Instant Upload</string>

    <string name="services_list_empty_title">Welcome to InstantUpload</string>
    <string name="services_list_empty_create">Get started by adding a new service using the button below.</string>
    <string name="services_list_empty_help">Don\'t understand how this work? Tap the help button in the toolbar.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_new_upload_service">Add new upload service</string>
    <string name="menu_title_services">Your services</string>
    <string name="menu_placeholder_no_service_yet">No service yet.</string>
    <string name="services_sftp_name">SFTP</string>

    <string name="activity_select_service_type">Select a service to add…</string>
    <string name="select_service_help_text">Pick a service to add. You\'ll be able to configure it on the next screen.</string>

    <string name="activity_add_service">New %s service</string>
    <string name="service_configuration_name">Service Name</string>
    <string name="service_configuration_primary_service">Primary service</string>
    <string name="service_configuration_primary_service_help_label">What is a primary service?</string>
    <string name="service_configuration_primary_help_dialog_title">What is a primary service?</string>
    <string name="service_configuration_primary_help_dialog_content">
        You can use this service directly by sharing to the “Instant Upload” app if it\'s the primary service. This allows even faster uploads.\n\nNon-primary services can be used by sharing to the app “Instant Upload (all services)” and then picking the service in the list.
    </string>
    <string name="service_configuration_primary_help_dialog_close">Close</string>
    <string name="service_add_menu_done">Done</string>

    <string name="service_configuration_sftp_server">Server address</string>
    <string name="service_configuration_sftp_directory">Upload directory (absolute)</string>
    <string name="service_configuration_sftp_server_title">SFTP server</string>
    <string name="service_configuration_sftp_username">Username</string>
    <string name="service_configuration_sftp_password">Password</string>
    <string name="service_configuration_sftp_urls_title">Files names and URLs</string>
    <string name="service_configuration_sftp_filename_format_help">
        Enter the filename to use while uploading. Leave blank to keep the original filename.\nTap the help icon to learn how to format this.
    </string>
    <string name="service_configuration_sftp_filename">File name format</string>
    <string name="service_configuration_sftp_name_formats_help_label">Learn more about files names formats</string>
    <string name="service_configuration_sftp_filename_format_preview_label">Preview:</string>

    <string name="error_service_name_taken">This name is already taken</string>
    <string name="service_configuration_sftp_url_help">Type the public URL where the uploaded file will be accessible. This will be the URL copied in the clipboard. Put “%s” instead of the file name.</string>
    <string name="service_configuration_sftp_url">Public URL</string>

    <string name="dialog_filename_format_title">Filenames formatting</string>
    <string name="dialog_filename_format_button_close">Close</string>
    <string name="dialog_filename_format_button_use_suggested">Use suggested template</string>
    <string name="dialog_filename_format_what">This setting allows you to customize the name used when the file is uploaded to your server. If you want to keep the original name, leave the field empty.</string>
    <string name="dialog_filename_format_random">If you don\'t know what to choose and simply want a random name to be generated, you can tap the “Use suggested template” button.</string>
    <string name="dialog_filename_format_table_intro">Below are the placeholders you can put in the filename to be replaced with values.</string>
    <string name="dialog_filename_format_table_o" translatable="false">%o</string>
    <string name="dialog_filename_format_table_o_desc">Original file name</string>
    <string name="dialog_filename_format_table_O" translatable="false">%O</string>
    <string name="dialog_filename_format_table_O_desc">Original file name (without spaces)</string>
    <string name="dialog_filename_format_table_r" translatable="false">%r</string>
    <string name="dialog_filename_format_table_r_desc">Random string</string>
    <string name="dialog_filename_format_table_a" translatable="false">%a</string>
    <string name="dialog_filename_format_table_a_desc">Weekday (abbreviated name)</string>
    <string name="dialog_filename_format_table_A" translatable="false">%A</string>
    <string name="dialog_filename_format_table_A_desc">Weekday (full name)</string>
    <string name="dialog_filename_format_table_w" translatable="false">%w</string>
    <string name="dialog_filename_format_table_w_desc">Weekday (number)</string>
    <string name="dialog_filename_format_table_d" translatable="false">%d</string>
    <string name="dialog_filename_format_table_d_desc">Day of the month</string>
    <string name="dialog_filename_format_table_b" translatable="false">%b</string>
    <string name="dialog_filename_format_table_b_desc">Month (abbreviated name)</string>
    <string name="dialog_filename_format_table_B" translatable="false">%B</string>
    <string name="dialog_filename_format_table_B_desc">Month (full name)</string>
    <string name="dialog_filename_format_table_m" translatable="false">%m</string>
    <string name="dialog_filename_format_table_m_desc">Month number</string>
    <string name="dialog_filename_format_table_y" translatable="false">%y</string>
    <string name="dialog_filename_format_table_y_desc">Year (without century)</string>
    <string name="dialog_filename_format_table_Y" translatable="false">%Y</string>
    <string name="dialog_filename_format_table_Y_desc">Year (with century)</string>
    <string name="dialog_filename_format_table_H" translatable="false">%H</string>
    <string name="dialog_filename_format_table_H_desc">Hour (24-hour)</string>
    <string name="dialog_filename_format_table_I" translatable="false">%I</string>
    <string name="dialog_filename_format_table_I_desc">Hour (12-hour)</string>
    <string name="dialog_filename_format_table_p" translatable="false">%p</string>
    <string name="dialog_filename_format_table_p_desc">AM or PM</string>
    <string name="dialog_filename_format_table_M" translatable="false">%M</string>
    <string name="dialog_filename_format_table_M_desc">Minute</string>
    <string name="dialog_filename_format_table_S" translatable="false">%S</string>
    <string name="dialog_filename_format_table_S_desc">Second</string>
    <string name="dialog_filename_format_table_f" translatable="false">%f</string>
    <string name="dialog_filename_format_table_f_desc">Millisecond</string>
    <string name="dialog_filename_format_table_z" translatable="false">%z</string>
    <string name="dialog_filename_format_table_z_desc">UTC offset</string>
    <string name="dialog_filename_format_table_Z" translatable="false">%Z</string>
    <string name="dialog_filename_format_table_Z_desc">Timezone name</string>
    <string name="dialog_filename_format_table_j" translatable="false">%j</string>
    <string name="dialog_filename_format_table_j_desc">Day of the year</string>
    <string name="dialog_filename_format_table_U" translatable="false">%U</string>
    <string name="dialog_filename_format_table_U_desc">Week number of the year</string>
    <string name="dialog_filename_format_table_s" translatable="false">%s</string>
    <string name="dialog_filename_format_table_s_desc">Seconds since 01/01/1970</string>
    <string name="dialog_filename_format_table_percent" translatable="false">%%</string>
    <string name="dialog_filename_format_table_percent_desc">Literal percent sign</string>
    <string name="formatter_preview_example_filename">Example Photo.png</string>
    <string name="error_sftp_public_url_placeholder_missing">The public URL must contains the placeholder \'%s\'</string>
</resources>
