<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ServicesListActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ListView
            android:id="@+id/services_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:divider="@android:color/transparent"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="top"
            android:id="@+id/services_list_empty_tips">


            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/services_list_empty_title"
                android:gravity="top"
                android:layout_gravity="top|center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/services_list_empty_create"
                android:gravity="top|center"
                android:layout_marginTop="40dp"
                android:textColor="@color/material_grey_850" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/services_list_empty_help"
                android:gravity="top|center"
                android:layout_marginTop="60px"
                android:textColor="@color/material_grey_850" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
